test/invalid/idl/exposed.webidl
interface UnexposedInterface {};
partial interface UnexposedInterface {};
[NoInterfaceObject]
interface IntentionallyUnexposedInterface {};
namespace UnexposedNamespace {};
partial namespace UnexposedNamespace {};
